Added headless mode for controller